--- a/modules/ROOT/pages/authentication-sso.adoc
+++ b/modules/ROOT/pages/authentication-sso.adoc
@@ -21,55 +21,55 @@ Let's decorate the deployment.
 oc label dc/keycloak app.openshift.io/runtime=sso --overwrite=true -n %username%-tutorial
 ----
 
-image:./images/keycloak-decorate.png[SSO Icon]
+image:keycloak-decorate.png[SSO Icon]
 
 == Create a security realm
 
 Log in Keycloak, click on the link on the upper-right corner and click on *Administration Console*.
 
-image:./images/keycloak-administration-console.png[Admin console]
+image:keycloak-administration-console.png[Admin console]
 
 Use admin/admin as credentials.
 
-image:./images/keycloak-login.png[Login]
+image:keycloak-login.png[Login]
 
 Hover over the current realm area, upper left corner, as in the picture and click con *Add realm*.
 
-image:./images/keycloak-add-realm-1.png[Add Realm 1]
+image:keycloak-add-realm-1.png[Add Realm 1]
 
 Finally enter the name *customer*, then press *Create*.
 
-image:./images/keycloak-add-realm-2.png[Add Realm 2]
+image:keycloak-add-realm-2.png[Add Realm 2]
 
 == Create a custom client
 
 Click on the *Clients* area on the left, then click on *Create* on clients area.
 
-image:./images/keycloak-create-client-1.png[Create client]
+image:keycloak-create-client-1.png[Create client]
 
 Next, create a client with the name *istio*. You do not need to add more information and leave the Client Protocol as openid-connect. Click *Save*.
 
-image:./images/keycloak-create-client-2.png[Create client]
+image:keycloak-create-client-2.png[Create client]
 
 == Create a role
 
 To be able to select user by roles, we need to create at least one role. Create a role called *customer*. If you want, you can create another role just for testing.
 
-image:./images/keycloak-create-role.png[Create role]
+image:keycloak-create-role.png[Create role]
 
 == Create a test user
 
 Go to *Users* and click on *Add user*. Give the user just user name: *jason*.
 
-image:./images/keycloak-create-user.png[Create user]
+image:keycloak-create-user.png[Create user]
 
 We have to set the password to "*mysecretpassword*" (in *Credentials* tab) and make sure is not temporary.
 
-image:./images/keycloak-reset-password.png[Set password]
+image:keycloak-reset-password.png[Set password]
 
 Now let's assign our user the role we created before. Select the role ad click on *Add selected*. 
 
-image:./images/keycloak-assign-role.png[Assign role]
+image:keycloak-assign-role.png[Assign role]
 
 == Verify the result
 
@@ -104,7 +104,7 @@ echo $TOKEN_JSON | jq .realm_access.roles
 
 So let’s add just a value to the audience. To do this, open client *istio* and select the tab *Mappers* and press on the button *Create*. In the next form, we create a mapper that adds a hard coded value to the audience.
 
-image:./images/keycloak-audience-mapper.png[Audience mapper]
+image:keycloak-audience-mapper.png[Audience mapper]
 
 WARNING: XYZ suggests that replaceing the complete value of the attribute aud (audience) is not that easy and could bring side effects with it. 
 
@@ -127,7 +127,7 @@ As you can see, the attribute audience now contains two values customer and acco
 
 As we already said we have to surface the access roles... To do that again we need a mapper. This time, we are going to use a mapper of the type *User realm role*. Be sure your configuration looks like this, multivalued and Claim JSON type String.
 
-image:./images/keycloak-role-mapper.png[Role mapper]
+image:keycloak-role-mapper.png[Role mapper]
 
 Let's get a new token and check audience.
 
