--- a/modules/ROOT/pages/circuit-breaking.adoc
+++ b/modules/ROOT/pages/circuit-breaking.adoc
@@ -87,7 +87,7 @@ click on the red V2 box and see no traffic is being logged:
 
 [#img-503]
 .Kiali Graph Retry
-image:images/retry.png[]
+image:retry.png[]
 
 Even though the recommendation v2 has no traffic logged, the client has a
 100% success rate due to the retries.
@@ -137,7 +137,7 @@ to respond
 
 [#img-]
 .Kiali Graph Showing slow v2 endpoint response time
-image:images/circuit-breaking-graph-slowv2.png[]
+image:circuit-breaking-graph-slowv2.png[]
 
 If you click the "Distributed Tracing" button in Kiali, you can look at the
 Jaeger traces for these calls. You'll see that the 3s time for the calls that
@@ -153,11 +153,11 @@ console, then click "Networking" -> "Routes" and make sure to select the
 
 [#img-timeout-v1]
 .Kiali Distributed Tracing for Recommendation v1
-image:images/timeout-v1.png[]
+image:timeout-v1.png[]
 
 [#img-timeout-v2]
 .Kiali Distributed Tracing for Recommendation v2
-image:images/timeout-v2.png[]
+image:timeout-v2.png[]
 
 Note the duration of v2 is > 3s compared to the ms time of v1 and v3
 
@@ -203,7 +203,7 @@ You can also observe this in Kiali:
 
 [#img-timeout]
 .Kiali Graph for Timeout Rule
-image:images/timeout.png[]
+image:timeout.png[]
 
 Note that recommendation v2 now has a 100% failure rate due to the timeout
 rule. Also note that the response time will never be less than 1s because
@@ -292,7 +292,7 @@ Now go to "Distributed Tracing" in Kiali and look at the response times. Note th
 
 [#img-failfast]
 .Kiali Distributed Tracing for Base Fail Fast
-image:images/failfast.png[]
+image:failfast.png[]
 
 [#nocircuitbreaker]
 === Load test without circuit breaker
@@ -321,7 +321,7 @@ for x in $(seq 1 10); do curl http://${INGRESS_GATEWAY}; done
 
 [#img-nocicuit]
 .Kiali Distributed Tracing for Fail Fast w/no Circuit Breaking
-image:images/nocircuit.png[]
+image:nocircuit.png[]
 
 All of the requests to our system were successful, but 1/3 of the requests
 took longer time, as the `v2` instance/pod was a slow performer.
